@@ -8,6 +8,8 @@ Version 1.7.5+svn:
    * Added a couple of missing frames for the Inferno Drake
  * Language and i18n:
    * Updated translations: Spanish.
+ * WML engine:
+   * Fix silent=yes for objectives
  * Miscellaneous and bugfixes:
    * Fix broken "Skip Ai moves" option.
    * Changed upload log format and defaulted the new uploader.
